sumo/tests/netconvert/errors/false_output/Makefile.am
EXTRA_DIST =  errors.netconvert.exe hokkaido.edg.xml hokkaido.nod.xml \
options.netconvert output.netconvert.exe
